2017-03-31 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2017-03-31 Fred Gleason <fredg@paravelsystems.com>
	* Added 'COPYING'.
2017-03-31 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.
2017-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Added the '--skip_lockkeys' switch to the x11vnc(1) call in
	'x11vnc-auto@.service'.
2017-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Added 'x11vnc-auto.spec'.
2017-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.