@@ -1,0 +1,1 @@
+This is the NEWS file for the x11vnc-auto package.
